# jarvis

./: README.md  vercel.json  vite.config.js
.claude/: settings.local.json
backend/: .env.example  .gitignore  .pre-commit-config.yaml  .testmondata  Dockerfile  Makefile  README.md  docker-compose.override.yml  docker-compose.yml  manual_test.py  pyproject.toml  test_automation.py
backend/app/: __init__.py  browser_automation.py  crud.py  lenso_automation.py  main.py  models.py  utils.py
backend/app/api/: __init__.py  deps.py  main.py
backend/app/api/routes/: __init__.py  automation.py  pages.py  private.py  utils.py
backend/app/core/: __init__.py  _logging.py  config.py  db.py  log_config.py
backend/app/tests/: __init__.py  conftest.py
backend/app/tests/api/: __init__.py
backend/app/tests/api/routes/: __init__.py  test_pages.py  test_private.py
backend/app/tests/crud/: __init__.py
backend/app/tests/scripts/: __init__.py
backend/app/tests/utils/: __init__.py  page.py  utils.py
backend/docs/: automation_api.md
docs/: pull-request-design.md
echo/: codebase_pluely.xml  index.html  package-lock.json  pnpm-lock.yaml
echo/src/: App.css  index.css
frontend/: package.json
frontend/src/: App.css
src/: App.css  App.jsx
